--- a/home-portal/src/app/heating/components/trigger-button/trigger-button.component.html
+++ b/home-portal/src/app/heating/components/trigger-button/trigger-button.component.html
@@ -1,7 +1,8 @@
 <div class="flex-container">
   <div class="flex-item">
-    <h3>Värmepanna</h3>
+    <h3 style="margin-bottom: 0px;">Värmepanna</h3>
   </div>
+  <div></div>
   <div class="raw-item">
     <mat-slide-toggle
       (change)="onButtonToggle($event)"
