--- a/home-portal/src/app/heating/components/trigger-button/trigger-button.component.sass
+++ b/home-portal/src/app/heating/components/trigger-button/trigger-button.component.sass
@@ -1,12 +1,8 @@
-.example-spacer
-  flex: 1 1 auto
 .flex-container
-  display: flex
-  flex-direction: row
-  justify-content: space-between
-.flex-container.flex-item
-  flex: auto
-
-
-.flex-container.raw-item
-  width: 5rem
+  height:100%
+  display: grid
+  grid-template-columns: 100px auto 100px
+  align-items: center
+  justify-items: center
+.flex-item
+  justify-items: center
