--- a/home-portal/src/app/heating/containers/heating-control/heating-control.component.sass
+++ b/home-portal/src/app/heating/containers/heating-control/heating-control.component.sass
@@ -3,13 +3,17 @@
   border-radius: 5px /* 5px rounded corners */
   width: 90%
   height: 10%
-  margin: auto
-  text-align: center
+  margin: 25px 0 0 25px
+  /*text-align: center
   background-color: white
   padding:10px
-  margin-top: 10px
 
-.center
-    margin: auto
-    box-sizing: border-box
-    padding: 40px
+
+.centerA
+  position: absolute
+  height:100%
+  width: 100%
+  /*margin: -25px 0 0 -25px
+  /*margin:30px 10px 50px 10px
+  top: 50%
+  transform: translate(0, -50%) 
