--- a/home-portal/src/app/heating/containers/heating-control/heating-control.component.sass
+++ b/home-portal/src/app/heating/containers/heating-control/heating-control.component.sass
@@ -1,10 +1,9 @@
 .card
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2)
   border-radius: 5px /* 5px rounded corners */
-  width: 90%
+  width: auto
   height: 10%
-  margin: 25px 0 0 25px
-  /*text-align: center
+  margin: 10px 25px 10px 25px
   background-color: white
   padding:10px
 
@@ -13,7 +12,5 @@
   position: absolute
   height:100%
   width: 100%
-  /*margin: -25px 0 0 -25px
-  /*margin:30px 10px 50px 10px
   top: 50%
   transform: translate(0, -50%) 
