--- a/home-portal/src/styles.sass
+++ b/home-portal/src/styles.sass
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/indigo-pink.css'
+body
+    margin: 0px
+    height: 100%
+    background: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%)
+html
+    height:100%
